# bg_store

./: .gitignore  CHANGELOG.md  DEPLOY.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.metrics.yml  docker-compose.prod.yml  docker-compose.yml  locustfile.py  package-lock.json  package.json  pytest.ini  tailwind.config.js  todo
assets/: tw.css
backend/: .coveragerc  .dockerignore  .env.example  .env.prod.example  Dockerfile  manage.py  pyproject.toml  pytest.ini
backend/catalog/: admin.py  apps.py  es_index.py  fixtures.json  models.py  offer_service.py  serializers.py  signals.py  urls.py  views.py
backend/commerce/: __init__.py  admin.py  apps.py  company_service.py  models.py  serializers.py  signals.py  urls_admin.py  urls_public.py  utils.py  validators.py  views_admin.py  views_public.py
backend/config/: admin.py  asgi.py  celery.py  gunicorn.py  urls.py  wsgi.py
backend/core/: admin.py  logging_utils.py  metrics_urls.py  middleware.py  models.py  notifications.py  pdf.py  secure.py  sentry.py  views.py
backend/orders/: admin.py  apps.py  models.py  payment_providers.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
backend/promotions/: admin.py  apps.py  models.py  services.py
backend/shopfront/: admin.py  apps.py  cart_checkout_service.py  cart_mutation_service.py  cart_store.py  catalog_selectors.py  checkout_flow_service.py  context_processors.py  forms.py  live_search_service.py  models.py  recommendations.py  review_service.py  search.py  search_service.py  signals.py  tasks.py  tests.py  urls.py  views.py
(+285 files in other folders)
